[build-system]
requires = ["setuptools>=40.8.0", "wheel", "cffi"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 80

[tool.cibuildwheel]
build-verbosity = "1"
test-requires = ["pytest"]
test-command = "bash {project}/python/test-wheel.sh {project}"
skip = "cp36-* cp37-* pp37-* *-manylinux_i686 *_ppc64le *_s390x *-musllinux*"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
