[package]
authors = ["Jed Brown <jed@jedbrown.org",
           "Yohann Dudouit <dudouit1@llnl.gov>",
           "Jeremy L Thompson <thompson.jeremy.luke@gmail.com>",]
build = "build.rs"
name = "ceed"
version = "0.6.0"
links = "ceed"
edition = "2018"

[lib]
name = "ceed"

[build-dependencies]
bindgen = "*"