[package]
authors = [
    "Jed Brown <jed@jedbrown.org>",
    "Yohann Dudouit <dudouit1@llnl.gov>",
    "Jeremy L Thompson <thompson.jeremy.luke@gmail.com>",
]
name = "libceed"
version = "0.9.0"
edition = "2018"
license = "BSD-2-Clause"
repository = "https://github.com/CEED/libCEED"
documentation = "https://docs.rs/libceed"
description = """
High-level interface for libCEED - the efficient high-order discretization library developed by the ECP co-design center CEED.
"""
keywords = ["libceed", "exascale", "high-order"]
categories = ["science"]

[dependencies]
libceed-sys = { version = "0.9", path = "../libceed-sys" }
katexit = "0.1.1"

[dev-dependencies]
version-sync = "0.9.2"
