[package]
authors = [
    "Jed Brown <jed@jedbrown.org>",
    "Yohann Dudouit <dudouit1@llnl.gov>",
    "Jeremy L Thompson <thompson.jeremy.luke@gmail.com>",
]
name = "libceed"
version = "0.12.0"
edition = "2018"
rust-version = "1.56"
license = "BSD-2-Clause"
repository = "https://github.com/CEED/libCEED"
documentation = "https://docs.rs/libceed"
description = """
High-level interface for libCEED - the efficient high-order discretization library developed by the ECP co-design center CEED.
"""
keywords = ["libceed", "exascale", "high-order"]
categories = ["science"]

[dependencies]
libceed-sys = { version = "0.12", path = "../libceed-sys" }
katexit = { version = "0.1.1", optional = true }

[dev-dependencies]
version-sync = "0.9.2"

[package.metadata.docs.rs]
features = ["katexit"]

[package.metadata.release]
pre-release-replacements = [
  { file = "README.md", search = "libceed = \"[0-9.]*\"", replace = "libceed = \"{{version}}\"" },
  { file = "../../README.md", search = "libceed = \"[0-9.]*\"", replace = "libceed = \"{{version}}\"" },
]
